--- a/application/templates/auth/partials/register_store.html
+++ b/application/templates/auth/partials/register_store.html
@@ -13,7 +13,7 @@
       {{ store_form.hidden_tag() }}
 
       {% for field in [
-        store_form.pharmacy_name,
+        store_form.storename,
         store_form.email,
         store_form.phone,
         store_form.address,
