--- a/application/templates/auth/register.html
+++ b/application/templates/auth/register.html
@@ -44,7 +44,22 @@
                 <small class="text-danger">{{ error }}</small>
               {% endfor %}
             </div>
+                        <div class="mb-3">
+              {{ form.town.label(class="form-label") }}
+              {{ form.town(class="form-control", placeholder="eg. Maputsoe, Ha Maqele") }}
 
+              {% for error in form.town.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
+            <div class="mb-3">
+              {{ form.district.label(class="form-label") }}
+              {{ form.district(class="form-control") }}
+
+              {% for error in form.district.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
             <!-- Password -->
             <div class="mb-3 form-password-toggle">
               <div class="d-flex justify-content-between">
