--- a/application/templates/auth/registerphar.html
+++ b/application/templates/auth/registerphar.html
@@ -18,19 +18,63 @@
               <form id="formAuthentication" class="mb-3" action="{{url_for('auth.registerstore')}}" method="POST">
                 <div class="mb-3">
                 {{ form.hidden_tag() }}
-                {% for field in [form.pharmacy_name, form.email, form.phone, form.address, form.district, form.town, form.opening_hours_and_days, form.password] %}
-                    <div class="form-group mb-3">
-                        {{ field.label(class="form-label") }}
-                        {{ field(class="form-control", placeholder=field.label.text) }}
-                        {% if field.errors %}
-                            <div class="text-danger small">
-                                {% for error in field.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                    </div>
+                <div class="mb-3">
+                {{ form.storename.label(class="form-label") }}
+                {{ form.storename(class="form-control", placeholder="My Store Name") }}
+
+                 {% for error in form.storename.errors %}
+                <small class="text-danger">{{ error }}</small>
                 {% endfor %}
+                </div>
+
+            <div class="mb-3">
+              {{ form.email.label(class="form-label") }}
+              {{ form.email(class="form-control", placeholder="user@mail.com") }}
+
+              {% for error in form.email.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
+            <div class="mb-3">
+              {{ form.phone.label(class="form-label") }}
+              {{ form.phone(class="form-control", placeholder="+266 1234 5678") }}
+
+              {% for error in form.phone.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
+            <div class="mb-3">
+              {{ form.opening_hours_and_days.label(class="form-label") }}
+              {{ form.opening_hours_and_days(class="form-control", placeholder="08:30 to 21:00") }}
+
+              {% for error in form.opening_hours_and_days.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
+            <div class="mb-3">
+              {{ form.town.label(class="form-label") }}
+              {{ form.town(class="form-control", placeholder="eg. Maputsoe, Ha Maqele") }}
+
+              {% for error in form.town.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
+            <div class="mb-3">
+              {{ form.district.label(class="form-label") }}
+              {{ form.district(class="form-control") }}
+
+              {% for error in form.district.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
+            <div class="mb-3">
+              {{ form.password.label(class="form-label") }}
+              {{ form.password(class="form-control", placeholder="************") }}
+
+              {% for error in form.password.errors %}
+                <small class="text-danger">{{ error }}</small>
+              {% endfor %}
+            </div>
                 <button class="btn btn-success d-grid w-100">Submit</button>
               </form>
             </div>
