--- a/application/templates/store/updatedetails.html
+++ b/application/templates/store/updatedetails.html
@@ -12,12 +12,17 @@
 
             {{form.ecocashcode.label}}
             {{ form.ecocashcode(class="form-control") }}
+            {{form.econame.label}}
+             {{form.econame(class="form-control")}}
         </div>
 
         <!-- Product Price -->
         <div class="form-group">
             {{form.mpesacode.label}}
+             
             {{ form.mpesacode(class="form-control") }}
+            {{form.mpesaname.label}}
+            {{form.name(class="form-control")}}
         </div>
         <!-- Submit Button -->
         <button type="submit" class="btn btn-outline-success rounded-pill">Update</button>
