--- a/application/templates/admin/registerstore.html
+++ b/application/templates/admin/registerstore.html
@@ -3,9 +3,6 @@
 
 {% block content %}
 
-
-
-
 <div class="card">
     <div class="text-center mb-4">
     <h4>Store Registration</h4>
@@ -19,7 +16,7 @@
               <form id="formAuthentication" class="mb-3" action="{{url_for('auth.registerstore')}}" method="POST">
                 <div class="mb-3">
                 {{ form.hidden_tag() }}
-                {% for field in [form.pharmacy_name, form.email, form.phone, form.address, form.opening_hours_and_days, form.password] %}
+                {% for field in [form.storename, form.email, form.phone, form.district, form.town, form.opening_hours_and_days, form.password] %}
                     <div class="form-group mb-3">
                         {{ field.label(class="form-label") }}
                         {{ field(class="form-control", placeholder=field.label.text) }}
