refactor: Update product category references from name to ID for consistency

--- a/application/templates/store/updated_products.html
+++ b/application/templates/store/updated_products.html
@@ -31,8 +31,8 @@
                     <tr>
                         <td class="fw-semibold">{{ item.productname }}</td>
                         <td style="white-space: normal;">{{ item.description }}</td>
-                        <td class="fw-bold">{{ item.category_name }}</td>
-                        <td class="fw-bold">M {{ item.price }}</td>
+                        <td class="fw-bold">{{ item.category.name }}</td>
+                        <td class="fw-bold">{{ item.price }}</td>
 
                         <td>
                             <div class="d-flex gap-2">
